# straw

./: README.md  app.py  pyproject.toml
straw/: schema.py
straw/schemas/: pagination.py  player.py  team.py
